infra/k8s/inventory-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-mongo
  template:
    metadata:
      labels:
        app: inventory-mongo
    spec:
      containers:
        - name: inventory-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-mongo-srv
spec:
  selector:
    app: inventory-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
