infra/k8s/materials-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: materials-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: materials
  template:
    metadata:
      labels:
        app: materials
    spec:
      containers:
        - name: materials
          image: patrickgorman/materials
---
apiVersion: v1
kind: Service
metadata:
  name: materials-srv
spec:
  selector:
    app: materials
  ports:
    - name: materials
      protocol: TCP
      port: 3000
      targetPort: 3000
